--- a/index.html
+++ b/index.html
@@ -5,34 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="./src/fetch.js"></script>
+    <script type="module" src="./src/search.js"></script>
     <title>Movie</title>
   </head>
   <body>
-    <header>
-      <ul>
-        <li class="website-title">
+    <div class="container">
+      <header>
+        <div class="website-title">
           <label for="search">영화 검색</label>
-        </li>
-        <li class="movie-search">
-          <form action="#" method="get">
-            <input
-              class="search-box"
-              id="search"
-              type="search"
-              placeholder="영화를 검색하세요."
-            />
-          </form>
-        </li>
-        <li class="book-mark">
-          <input class="book-mark-button" type="button" value="북마크" />
-        </li>
-      </ul>
-    </header>
+        </div>
+        <div class="movie-search">
+          <input
+            class="movie-search-input"
+            type="text"
+            id="search"
+            placeholder="영화를 검색하세요"
+          />
+        </div>
+        <div class="book-mark">
+          <input type="button" class="book-mark-button" value="북마크" />
+        </div>
+      </header>
 
-    <main>
-      <div class="movie-list"></div>
-    </main>
+      <main>
+        <div class="movie-list"></div>
+      </main>
 
-    <footer></footer>
+      <footer></footer>
+    </div>
   </body>
 </html>
