--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="./src/api.js"></script>
+    <script type="module" src="./src/card.js"></script>
     <script type="module" src="./src/search.js"></script>
+    <script type="module" src="./src/detail.js"></script>
     <title>Movie</title>
   </head>
   <body>
