북마크 추가하기까지 구현

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <script type="module" src="./src/card.js"></script>
     <script type="module" src="./src/search.js"></script>
     <script type="module" src="./src/modal.js"></script>
+
     <title>Movie</title>
   </head>
   <body>
     <div class="container">
       <header>
         <div class="website-title">
-          <label for="search">영화 검색</label>
+          <a href="index.html">영화 검색</a>
         </div>
 
         <div class="movie-search">
@@ -41,6 +42,7 @@
           </div>
 
           <div class="movie-info-all"></div>
+          <div class="movie-add"></div>
         </div>
       </div>
 
