북마크 기능 구현 완료

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             type="text"
             id="search"
             placeholder="영화를 검색하세요"
+            autofocus
           />
         </div>
 
@@ -42,7 +43,7 @@
           </div>
 
           <div class="movie-info-all"></div>
-          <div class="movie-add"></div>
+          <div class="movie-add-delete"></div>
         </div>
       </div>
 
