코드 분할 및 정리

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="./src/card.js"></script>
+    <script type="module" src="./src/movie-card.js"></script>
     <script type="module" src="./src/search.js"></script>
     <script type="module" src="./src/modal.js"></script>
+    <script type="module" src="./src/bookmark.js"></script>
 
     <title>Movie</title>
   </head>
