실시간 검색 기능 구현 완료

--- a/index.html
+++ b/index.html
@@ -14,26 +14,35 @@
   <body>
     <div class="container">
       <header>
-        <div class="website-title">
-          <a href="index.html">영화 검색</a>
-        </div>
-
-        <div class="movie-search">
-          <input
-            class="movie-search-input"
-            type="text"
-            id="search"
-            placeholder="영화를 검색하세요"
-            autofocus
-          />
-        </div>
-
-        <div class="book-mark">
-          <input type="button" class="book-mark-button" value="북마크" />
+        <div class="navbar">
+          <div class="menu-list-container">
+            <ul class="menu-list">
+              <li class="menu-item web-title">
+                <a href="index.html">POP CINEMA</a>
+              </li>
+              <li class="menu-item">현재 상영</li>
+              <li class="menu-item">인기 영화</li>
+              <li class="menu-item book-mark">
+                <input type="button" class="book-mark-button" value="북마크" />
+              </li>
+            </ul>
+          </div>
+          <div class="movie-search">
+            <input
+              class="movie-search-input"
+              type="text"
+              id="search"
+              placeholder="영화를 검색하세요"
+              autofocus
+            />
+          </div>
         </div>
       </header>
 
       <main>
+        <div class="banner">
+          <img src="https://ifh.cc/g/KFW4ft.jpg" alt="배너 이미지" />
+        </div>
         <div class="movie-list"></div>
       </main>
 
